tests/snapshots/codegen_snapshot_tests__returns.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 2643
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn simple_return() -> i64 {
    return 42;
}
fn return_expression() -> i64 {
    let x: i64 = 10;
    let y: i64 = 20;
    return x + y;
}
fn early_return(x: i64) -> String {
    if x < 0 {
        return "negative".to_string();
    } else {
        if x == 0 {
            return "zero".to_string();
        } else {
            return "positive".to_string();
        }
    }
}
fn multiple_returns(x: i64) -> i64 {
    if x < 10 {
        return x * 2;
    }
    return x * 3;
}
fn return_from_loop(numbers: Vec<i64>) -> i64 {
    for num in numbers.iter().copied() {
        if num > 10 {
            return num;
        }
    }
    return -1;
}
fn void_return() {
    let _ = println!("{}", "Hello");
    return;
}
fn implicit_void_return() {
    let x: i64 = 5;
    if x > 0 {
        let _ = println!("{}", "positive");
        return;
    }
    let _ = println!("{}", "not positive");
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _result1: i64 = simple_return();
    let _result2: i64 = return_expression();
    let _result3: String = early_return(5);
    let _result4: i64 = multiple_returns(15);
    let _result5: i64 = return_from_loop(vec![1, 5, 15, 20]);
    let _ = void_return();
    let _ = implicit_void_return();
}
fn main() {
    main();
}
