tests/snapshots/codegen_snapshot_tests__rfc024_partial_alias_derive.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 5046
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::serde::json::Serialize as JsonSerialize;
#[derive(
    serde::Serialize,
    Debug,
    Clone,
    incan_derive::FieldInfo,
    incan_derive::IncanClass
)]
struct Payload {
    value: i64,
}
impl incan_stdlib::reflection::HasClassName for Payload {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Payload {
    fn __class_name__() -> &'static str {
        "Payload"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Payload {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Payload {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("value"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Payload {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "value" => Some(format!("{}", self.value)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("value".to_string(), format!("{}", self.value))]
    }
}
impl JsonSerialize for Payload {
    fn to_json(&self) -> String {
        return {
            let __incan_json_value = &(self);
            incan_stdlib::json::__private::stringify_or_raise(
                __incan_json_value,
                std::any::type_name_of_val(__incan_json_value),
            )
        };
    }
}
impl Payload {
    #[inline(never)]
    pub fn to_json(&self) -> String {
        <Self as JsonSerialize>::to_json(self)
    }
}
fn encode<T: JsonSerialize>(value: T) -> String {
    return crate::__incan_std::serde::json::JsonSerialize::to_json(&value);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    return encode(Payload { value: 1 });
}
fn main() {
    main();
}
