tests/snapshots/codegen_snapshot_tests__rfc041_interop_into_via.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4289
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::std::env::var;
use ::std::string::String as RustString;
type Name = RustString;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let name = Name::parse("alice@example.com".to_string());
    let _ = var(name);
}
fn main() {
    main();
}
