tests/snapshots/codegen_snapshot_tests__rfc041_rust_coercions.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4310
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::std::time::Duration;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _d = Duration::from_secs_f32(1.5);
    let _ = println!("{}", _d.as_secs_f32());
}
fn main() {
    main();
}
